--- a/package.json
+++ b/package.json
@@ -28,24 +28,19 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.18.0",
-    "chai": "^3.5.0",
-    "chai-immutable": "^1.6.0",
-    "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
-    "immutable": "^3.8.1",
-    "jsdom": "^9.8.3",
-    "map": "^1.0.1",
-    "mocha": "^3.1.2",
+    "node-uuid": "^1.4.7",
     "react": "^15.4.0",
-    "react-addons-pure-render-mixin": "^15.4.0",
     "react-addons-test-utils": "^15.4.0",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.4.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.13.2"
